tell dif between cards from same scorecard played at different days and hours

--- a/play_game/templates/play_game/game-save.html
+++ b/play_game/templates/play_game/game-save.html
@@ -10,9 +10,9 @@
     <div class='row'>
         <div class='col-xs-3 col-md-5' align="left">
             <h5 class="list-group-item bg-secondary text-light" style="width: 300px">
-                Card: {{name.card}}</h5>
+                Card: {{park.card}}</h5>
             <h6 class="list-group-item bg-secondary text-light" style="width: 300px">Park: {{park.park}} </h6>
-            <h6 class="list-group-item bg-secondary text-light" style="width: 300px">Date: {{name.timestamp|date:"D M, d f"}} </h6>
+            <h6 class="list-group-item bg-secondary text-light" style="width: 300px">Date: {{park.timestamp|date:"D M, d f"}} </h6>
             {% comment %} <ul class="list-group list-group-flush" id="cards">
                 {% for c in course_list %}
                 <li class="list-group-item bg-secondary text-light" style="width: 200px">
