--- a/templates/home.html
+++ b/templates/home.html
@@ -17,9 +17,9 @@
       <div class='text-light'><h3>Recent Games:</h3></div>
       <ul class="list-group list-group-flush" id="cards">
         {% for game in games_list %}
-            <li class="badge badge-secondary text-light" align='left' style="width: 200px">
+            <li class="badge badge-secondary" align='left' style="width: 200px">
               <a href='/save-game/{{game.card}}/{{game.timestamp|date:"j"}}/{{game.timestamp|date:"H"}}'>
-              <p>{{game.card}} - {{game.timestamp|date:"M, j Y- f"}}</p>
+              <p class='text-light'>{{game.card}} - {{game.timestamp|date:"M, j Y- f"}}</p>
             </li>
             </br>
         {% endfor %}
