--- a/courses/templates/courses/park-list.html
+++ b/courses/templates/courses/park-list.html
@@ -18,6 +18,11 @@
       {% comment %} todo something better than this {% endcomment %}
     </br></br></br></br></br></br></br></br></br>
       <div align="right">
+        <a href="/newpark" class="btn btn-primary btn-md " 
+        tabindex="-1" role="button" aria-disabled="true">Add Park</a>
+      </div>
+      </br></br></br>
+      <div align="right">
         <a href="/" class="btn btn-primary btn-md " 
         tabindex="-1" role="button" aria-disabled="true">Back</a>
       </div>
