--- a/courses/templates/courses/parkform.html
+++ b/courses/templates/courses/parkform.html
@@ -20,8 +20,8 @@
     <button type="submit">Send</button>
 </form>
 <div align="right">
-    <a href="/settings" class="btn btn-primary btn-lg " 
-    tabindex="-1" role="button" aria-disabled="true">Back to Settings</a>
+    <a href="/park" class="btn btn-primary btn-lg " 
+    tabindex="-1" role="button" aria-disabled="true">Back to Parks</a>
 </div>
 
 {% endblock %}
