--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,20 +13,20 @@
 </div>
 <br /><br /><br />
 <div align="right" >
-  <a href="/create" class="btn btn-primary btn-lg " 
+  <a href="/cards" class="btn btn-primary btn-lg " 
   tabindex="-1" role="button" aria-disabled="true">Edit Cards</a>
 </div>
 <br /> <br /> <br /> 
 <div align="right" >
   <a href="/deletecourse" class="btn btn-primary btn-lg " 
-  tabindex="-1" role="button" aria-disabled="true">Delete Games</a>
+  tabindex="-1" role="button" aria-disabled="true">Delete Games_WIP</a>
 </div>
 <br /> <br /> <br />
 <form method="POST">
   <br/>
   <div align="right">
-   <a href="/accounts/editprofile" class="btn btn-primary btn-lg " 
-   tabindex="-1" role="button" aria-disabled="true">Profile Settings</a>
+   <a href="" class="btn btn-primary btn-lg " 
+   tabindex="-1" role="button" aria-disabled="true">Profile Settings_WIP</a>
   </div>
   <br /> <br />
   <div align="right">
