--- a/accounts/templates/accounts/user-stats.html
+++ b/accounts/templates/accounts/user-stats.html
@@ -5,7 +5,7 @@
         <h1> {{title}} </h1>
     {%endif%}
     <div class='col-xs-2 col-md-3' align='left'>
-        <div class='text-light'><h2>Park List:</h2></div>
+        <div class='text-light'><h2>Saved Games:</h2></div>
           <ul class="list-group list-group-flush"  id="parks">
           {% for park in park_list %}
             <li class="badge badge-secondary text-light" style="width: 200px">
