technicaly working...i think, need refactoring play_game views file

--- a/play_game/templates/play_game/new-game.html
+++ b/play_game/templates/play_game/new-game.html
@@ -37,7 +37,7 @@
       <button class="btn btn-primary" name="NavHole" type="submit" value="dn">-</button>
     </div>
     <div>
-      <h5 class=" text-light" align="center">Throws: {{throws}} <> Avg: {{par}}
+      <h5 class=" text-light" align="center">Throws: {{throws}} <> Avg: {{avg}}
     </div>
     <div align="center" class="col col-md-2">
       <button class="btn btn-primary" name="NavHole" type="submit" value="up">+</button>
