--- a/accounts/templates/accounts/user-stats.html
+++ b/accounts/templates/accounts/user-stats.html
@@ -7,12 +7,13 @@
     <div class='col-xs-2 col-md-3' align='left'>
         <div class='text-light'><h2>Saved Games:</h2></div>
           <ul class="list-group list-group-flush"  id="parks">
-          {% for park in park_list %}
-            <li class="badge badge-secondary text-light" style="width: 200px">
-                <a href='/save-game/{{park.card}}/{{park.timestamp|date:"j"}}/{{park.timestamp|date:"G"}}'>
-                <p class='text-light'>{{park.card}} - {{park.timestamp|date:"M, j Y- f"}}</p></li>
-            </br> 
-          {% endfor %}
+            {% for game in games_list %}
+            <li class="badge badge-secondary" align='left' style="width: 200px">
+              <a href='/save-game/{{game.card}}/{{game.timestamp|date:"j"}}/{{game.timestamp|date:"G"}}/{{game.timestamp|time:"i"}}'>
+              <p class='text-light'>{{game.card}} - {{game.timestamp|date:"M, j Y- f"}}</p>
+            </li>
+            </br>
+        {% endfor %}
         </ul>
         </div>
 <div align="right">
