--- a/accounts/templates/accounts/user-stats.html
+++ b/accounts/templates/accounts/user-stats.html
@@ -1,21 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
 {% csrf_token %}
-    {% if title %}
-        <h1> {{title}} </h1>
-    {%endif%}
-    <div class='col-xs-2 col-md-3' align='left'>
-        <div class='text-light'><h2>Saved Games:</h2></div>
-          <ul class="list-group list-group-flush"  id="parks">
+{% if title %}
+    <h1 class='text-light'> {{title}} </h1>
+{%endif%}
+<div class='col-xs-2 col-md-3' align='left'>
+    <div class='text-light'><h2>Saved Games:</h2></div>
+        <ul class="list-group list-group-flush"  id="parks">
             {% for game in games_list %}
-            <li class="badge badge-secondary" align='left' style="width: 200px">
-              <a href='/save-game/{{game.card}}/{{game.timestamp|date:"j"}}/{{game.timestamp|date:"G"}}/{{game.timestamp|time:"i"}}'>
-              <p class='text-light'>{{game.card}} - {{game.timestamp|date:"M, j Y- f"}}</p>
-            </li>
-            </br>
-        {% endfor %}
+                <li class="badge badge-secondary" align='left' style="width: 200px">
+                    <a href='/save-game/{{game.card}}/{{game.timestamp|date:"j"}}/{{game.timestamp|date:"G"}}/{{game.timestamp|time:"i"}}'>
+                    <p class='text-light'>{{game.card}} - {{game.timestamp|date:"M, j Y- f"}}</p>
+                    </a>
+                </li>
+                </br>
+            {% endfor %}
         </ul>
-        </div>
+    </div>
+    <h2 class='text-light'>Park Stats:</h2>
+        <ul class="list-group list-group-flush"  id="parks">
+            {% for park in park_list %}
+                <li class="badge badge-secondary" align='left' style="width: 200px">
+                    <a href='/park-stats/{{park.park}}'>
+                    <p class='text-light'>{{park.park}}</p>
+                    </a>
+                </li>
+                </br>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 <div align="right">
     <a href="/" class="btn btn-primary btn-lg " 
     tabindex="-1" role="button" aria-disabled="true">Back to Home</a>
