--- a/accounts/templates/accounts/user-stats.html
+++ b/accounts/templates/accounts/user-stats.html
@@ -1,12 +1,17 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 {% extends "base.html" %}
 {% block content %}
 {% csrf_token %}
 {% if title %}
     <h1 class='text-light'> {{title}} </h1>
 {%endif%}
+
 <div class='col-xs-2 col-md-3' align='left'>
-    <div class='text-light'><h2>Saved Games:</h2></div>
-        <ul class="list-group list-group-flush"  id="parks">
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          Saved Games:
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
             {% for game in games_list %}
                 <li class="badge badge-secondary" align='left' style="width: 200px">
                     <a href='/save-game/{{game.card}}/{{game.timestamp|date:"j"}}/{{game.timestamp|date:"G"}}/{{game.timestamp|time:"i"}}'>
@@ -17,8 +22,12 @@
             {% endfor %}
         </ul>
     </div>
-    <h2 class='text-light'>Park Stats:</h2>
-        <ul class="list-group list-group-flush"  id="parks">
+    </br></br></br>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+          Park Stats:
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
             {% for park in park_list %}
                 <li class="badge badge-secondary" align='left' style="width: 200px">
                     <a href='/park-stats/{{park.park}}'>
