--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
         {% endblock %}</title>
     </head>
-    <body class='bg-dark'>
+    <body class='bg-secondary'>
       <!-- Main menu code-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
