--- a/play_game/templates/play_game/new-game.html
+++ b/play_game/templates/play_game/new-game.html
@@ -4,18 +4,16 @@
 <form method="POST">
     {% csrf_token %}
   <!-- Form for playing a new game -->
-  <div align="center" class="card bg-dark" style="width: 50rem;">
+  <div align="center" class="card bg-secondary" style="width: 25rem;">
     <div class="card-body">
       <h3 class=" card-title text-light" align="center">Card: {{title}}
       </h3>
       <h4 class=" card-title text-light" align="center">Park: {{park}}
       </h4>
-      <h3 class=" text-light" align="center">
-        <div>Hole:</div>
-        <a>
-          {{hole}}
-        </a>
-      </h3>
+      <h4 class=" text-light" align="center">
+        Hole: {{hole}}
+      </h4>
+      <br />
       <div align="left" class="row justify-content-md-center">
         <div class="col col-md-2">
           <button class="btn btn-primary" name="NavHole" type="submit" value="DN">-</button>
@@ -28,12 +26,12 @@
         </div>
       </div>
       </h5>
-      <br /><br />
+      <br />
     </div>
     <div>
       <h5 class=" text-light" align="center">Distance: {{dist}} ft.
     </div>
-    <br /><br />
+    <br />
     <div>
     <div align="center" class="row justify-content-md-center">
       <div class="col col-md-2">
@@ -46,21 +44,21 @@
         <button class="btn btn-primary" name="NavHole" type="submit" value="up">+</button>
       </div>
     </div>
-    <br /><br /><br />
+    <br />
     <div align="center" class="row justify-content-md-center">
-      <div class="col col-md-2">
-        <h5 class=" text-light" align="left">Score: {{Score}}</h5>
+      <div class="col col-md-4">
+        <h6 class=" text-light" align="left">Score: {{Score}}</h6>
       </div>
-      <div class="col col-md-2">
-        <h5 class=" text-light" align="right">Cur. Score: {{CurScore}}</h5>
+      <div class="col col-md-4">
+        <h6 class=" text-light" align="right">Cur. Score: {{CurScore}}</h6>
       </div>
     </div>
     <br />
     <div align="left" class="row justify-content-md-center">
-      <div class="col col-md-2">
+      <div class="col col-md-4">
         <button class="btn btn-primary" name="NavHole" type="submit" value="Pre">Prev. Hole</button>
       </div>
-      <div align="right" class="col col-md-2">
+      <div align="right" class="col col-md-4">
         <button class="btn btn-primary" name="NavHole" type="submit" value="Next">Next Hole</button>
       </div>
     </div>
@@ -68,10 +66,10 @@
   <br /><br /><br />
   {% if GameOver %}
   <div align="left" class="row justify-content-md-center">
-    <div class="col col-md-2">
+    <div class="col col-md-4">
       <button class="btn btn-primary" name="NavHole" type="submit" value="del">Delete Game</button>
     </div>
-    <div align="right" class="col col-md-2">
+    <div align="right" class="col col-md-4">
       <button class="btn btn-primary" name="NavHole" type="submit" value="save">Save Game</button>
     </div>
   </div>
@@ -79,7 +77,7 @@
   {% endif %}
 </form>
 <!-- Button to navigate back to home screen -->
-<div align="right">
+<div class="col col-md-12" align="right">
   <a href="/" class="btn btn-primary btn-lg " tabindex="-1" role="button" aria-disabled="true">Back to home</a>
 </div>
 <br /><br />
