--- a/play_game/templates/play_game/card-select.html
+++ b/play_game/templates/play_game/card-select.html
@@ -25,16 +25,17 @@
         </ul>
     </div>
 </div>
-<br /><br /><br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br /><br /><br />
 <div class='row' align='center'>
-    <div class='col-xs-2 col-md-4' align="right">
+    <div class='col-xs-2 col-md-4'>
         <a href="/newcard" class="btn btn-primary btn-lg " 
         tabindex="-1" role="button" aria-disabled="true">Create New Card</a>
     </div>
-    <div class='col-xs-2 col-md-4' align="center">
+    <br /><br />
+    <div class='col-xs-2 col-md-4'>
         <a href="/" class="btn btn-primary btn-lg " 
         tabindex="-1" role="button" aria-disabled="true">Back to Home</a>
     </div>
 </div>
-
 {% endblock %}
