--- a/templates/home.html
+++ b/templates/home.html
@@ -52,6 +52,9 @@
     </div>
   {% else %}
     <div class='row'>
+      <h1 class='text-light' align='center'>
+        Welcome to the DiscGolf Scorecard App!
+      </h1>
       <h3 class='text-light' align='center'>You are not logged in...</p>
       <br /><br /><br /><br /><br />
       <div align="center" >
