--- a/accounts/templates/accounts/park-stats.html
+++ b/accounts/templates/accounts/park-stats.html
@@ -120,7 +120,7 @@
         {%endif%}
         </div>
         <div class='col-xs-2 col-md-3' align="right">
-             <a href="/" class="btn btn-primary btn-md" 
+             <a href="/accounts/userstats" class="btn btn-primary btn-md" 
              type="button" aria-disabled="true">Back</a>
         </div>
     </div>
