--- a/play_game/templates/play_game/game-save.html
+++ b/play_game/templates/play_game/game-save.html
@@ -137,7 +137,7 @@
               aria-disabled="true">Delete</a>
         </br></br>
              <a href="/" class="btn btn-primary btn-md" 
-             type="button" aria-disabled="true">Back</a>
+             type="button" aria-disabled="true">Back to Home</a>
         </div>
     </div>
 </div>
