newgame view ui update

--- a/play_game/templates/play_game/card-select.html
+++ b/play_game/templates/play_game/card-select.html
@@ -29,7 +29,7 @@
 <br /><br />
 <div align='right' class='col-xs-2 col-md-4'>
     <a href="/newcard" class="btn btn-primary btn-lg " 
-    tabindex="-1" role="button" aria-disabled="true">Create New Card</a>
+    tabindex="-1" role="button" aria-disabled="true">New Game</a>
 </div>
 <br /><br />
 <div align='right' class='col-xs-2 col-md-4'>
